[gd_scene load_steps=2 format=3 uid="uid://cx6hrb4q40qcn"]

[ext_resource type="Script" path="res://scripts/core/Shop.gd" id="1_shop"]

[node name="ShopScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_shop")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScrollContainer" type="ScrollContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "SHOP / PRACTICE"
horizontal_alignment = 1

[node name="AnteLabel" type="Label" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Ante: 1"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Current Stats:"
horizontal_alignment = 1

[node name="SpeedLabel" type="Label" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Speed: 10"
horizontal_alignment = 1

[node name="EnduranceLabel" type="Label" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Endurance: 10"
horizontal_alignment = 1

[node name="StaminaLabel" type="Label" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Stamina: 10"
horizontal_alignment = 1

[node name="PowerLabel" type="Label" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Power: 10"
horizontal_alignment = 1

[node name="HSeparatorStats" type="HSeparator" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="InventoryLabel" type="Label" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Current Inventory:"
horizontal_alignment = 1

[node name="TeamCountLabel" type="Label" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Team: 0"
horizontal_alignment = 1

[node name="DeckCountLabel" type="Label" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Deck: 0"
horizontal_alignment = 1

[node name="BoostsCountLabel" type="Label" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Boosts: 0"
horizontal_alignment = 1

[node name="EquipmentCountLabel" type="Label" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Equipment: 0"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="AvailableLabel" type="Label" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Available Items:"
horizontal_alignment = 1

[node name="TeamSection" type="VBoxContainer" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="TeamHeader" type="Label" parent="UI/ScrollContainer/VBoxContainer/TeamSection"]
layout_mode = 2
text = "--- TEAM (Runners) ---"
horizontal_alignment = 1

[node name="TeamItemsContainer" type="VBoxContainer" parent="UI/ScrollContainer/VBoxContainer/TeamSection"]
layout_mode = 2

[node name="DeckSection" type="VBoxContainer" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="DeckHeader" type="Label" parent="UI/ScrollContainer/VBoxContainer/DeckSection"]
layout_mode = 2
text = "--- DECK (Cards) ---"
horizontal_alignment = 1

[node name="DeckItemsContainer" type="VBoxContainer" parent="UI/ScrollContainer/VBoxContainer/DeckSection"]
layout_mode = 2

[node name="BoostsSection" type="VBoxContainer" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="BoostsHeader" type="Label" parent="UI/ScrollContainer/VBoxContainer/BoostsSection"]
layout_mode = 2
text = "--- BOOSTS (Modifiers) ---"
horizontal_alignment = 1

[node name="BoostsItemsContainer" type="VBoxContainer" parent="UI/ScrollContainer/VBoxContainer/BoostsSection"]
layout_mode = 2

[node name="EquipmentSection" type="VBoxContainer" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="EquipmentHeader" type="Label" parent="UI/ScrollContainer/VBoxContainer/EquipmentSection"]
layout_mode = 2
text = "--- EQUIPMENT / TRAINING ---"
horizontal_alignment = 1

[node name="EquipmentItemsContainer" type="VBoxContainer" parent="UI/ScrollContainer/VBoxContainer/EquipmentSection"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="UI/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Continue to Next Race"
